# schematic_db

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md
.github/workflows/: pdoc.yml  publish.yml  test.yml  test_formatting.yml  test_mysql.yml
db_object_config/: __init__.py  db_object_config.py
docs/: index.html  search.js
docs/db_object_config/: db_object_config.html
docs/rdb/: rdb.html
docs/rdb_type/: mysql.html  synapse.html
manifest_store/: __init__.py  manifest_store.py  synapse_manifest_store.py
query_store/: __init__.py  query_store.py  synapse_query_store.py
rbd_queryer/: __init__.py  rbd_queryer.py
rdb/: __init__.py  mysql.py  rdb.py  synapse.py  utils.py
rdb_queryer/: rdb_queryer.py
rdb_type/: __init__.py  mysql.py  rdb_type.py  synapse.py  synapse_database.py
rdb_updater/: __init__.py  rdb_updater.py  utils.py
schema/: api_utils.py  schema.py
schematic_db/: __init__.py
schematic_db/api_utils/: __init__.py  api_utils.py
schematic_db/db_config/: __init__.py  db_config.py
schematic_db/db_schema/: db_schema.py
schematic_db/manifest_store/: __init__.py  api_manifest_store.py  manifest_metadata_list.py  manifest_store.py  (+1 more)
synapse/: __init__.py  synapse.py
tests/: conftest.py  test_api_utils.py  test_db_object_config.py  test_db_schema.py  test_gff  test_gff.py  test_manifest_store.py  test_mysql.py  test_postgres.py  test_rdb.py  test_rdb_builder.py  test_rdb_queryer.py  test_rdb_updater.py  test_schema.py  test_sql.py  test_synapse.py  test_synapse_database.py  test_z_integration.py
(+29 files in other folders)
