[tool.poetry]
name = "schematic_db"
version = "0.1.0"
description = ""
authors = ["andrewelamb <andrewelamb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.39"
PyYAML = "^6.0"
mysqlclient = "^2.1.1"
SQLAlchemy-Utils = "^0.38.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
